tooling/nargo_cli/tests/snapshots/execution_success/signed_truncation/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 64
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _6",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ 256 ]], outputs: [_1, _2]",
    "BLACKBOX::RANGE [_1]:56 bits []",
    "EXPR [ (1, _0) (-256, _1) (-1, _2) 0 ]",
    "EXPR [ (1, _2) -255 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ 65536 ]], outputs: [_3, _4]",
    "BLACKBOX::RANGE [_3]:48 bits []",
    "EXPR [ (1, _0) (-65536, _3) (-1, _4) 0 ]",
    "EXPR [ (1, _4) -65535 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ 4294967296 ]], outputs: [_5, _6]",
    "BLACKBOX::RANGE [_5]:32 bits []",
    "EXPR [ (1, _0) (-4294967296, _5) (-1, _6) 0 ]",
    "EXPR [ (1, _6) -4294967295 ]",
    "EXPR [ (1, _0) -9223372036854775807 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]"
  ],
  "debug_symbols": "pZLdzoMgDIbvpcccgDr8uZUvXwxqXUgIGgZLFrN7X2Wyn4MdzJ28hbZPU2gXGLALx1bbcTpB87dA57Qx+tiaqVdeT5a8y5VBurbeIZILXuJEzcqh9dDYYAyDszIhJp1mZaP1ylGUM0A7kKWCoza4nq7sSfPPaJ5tbF4/4MP3dJHvoGXqW1a/0GW2g67qja7LX2jBxQ5ciCrxhXzj/+mmeu3e1gQ4JTIQUbOoOTT09QVNgMEhqoxa0igYVFSMQR1V8LshWpIhfH3wWTmtOoPbFo7B9i9L6S9ziqS1nd3U4xAcrp3FGPV6Aw==",
  "file_map": {
    "50": {
      "source": "fn main(x: i64) {\n    assert_eq(x as i8, -1);\n    assert_eq(x as i16, -1);\n    assert_eq(x as i32, -1);\n    assert_eq(x as i64, 0x7fffffffffffffff);\n}\n",
      "path": ""
    }
  },
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
