tooling/nargo_cli/tests/snapshots/execution_success/signed_truncation/execute__tests__force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 64
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _0",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ]], outputs: []",
    "unconstrained func 0",
    "[Const { destination: Direct(2), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(1), bit_size: Integer(U32), value: 32837 }, Const { destination: Direct(0), bit_size: Integer(U32), value: 3 }, Const { destination: Relative(2), bit_size: Integer(U32), value: 1 }, Const { destination: Relative(3), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(32836), size_address: Relative(2), offset_address: Relative(3) }, Cast { destination: Direct(32836), source: Direct(32836), bit_size: Integer(U64) }, Mov { destination: Relative(1), source: Direct(32836) }, Call { location: 13 }, Call { location: 14 }, Const { destination: Relative(1), bit_size: Integer(U32), value: 32837 }, Const { destination: Relative(2), bit_size: Integer(U32), value: 0 }, Stop { return_data: HeapVector { pointer: Relative(1), size: Relative(2) } }, Return, Call { location: 45 }, Cast { destination: Relative(3), source: Relative(1), bit_size: Integer(U8) }, Cast { destination: Relative(2), source: Relative(3), bit_size: Integer(U64) }, Cast { destination: Relative(3), source: Relative(2), bit_size: Integer(U8) }, Const { destination: Relative(2), bit_size: Integer(U8), value: 255 }, BinaryIntOp { destination: Relative(4), op: Equals, bit_size: U8, lhs: Relative(3), rhs: Relative(2) }, JumpIf { condition: Relative(4), location: 23 }, Const { destination: Relative(5), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(5) } }, Cast { destination: Relative(3), source: Relative(1), bit_size: Integer(U16) }, Cast { destination: Relative(2), source: Relative(3), bit_size: Integer(U64) }, Cast { destination: Relative(3), source: Relative(2), bit_size: Integer(U16) }, Const { destination: Relative(2), bit_size: Integer(U16), value: 65535 }, BinaryIntOp { destination: Relative(4), op: Equals, bit_size: U16, lhs: Relative(3), rhs: Relative(2) }, JumpIf { condition: Relative(4), location: 31 }, Const { destination: Relative(5), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(5) } }, Cast { destination: Relative(3), source: Relative(1), bit_size: Integer(U32) }, Cast { destination: Relative(2), source: Relative(3), bit_size: Integer(U64) }, Cast { destination: Relative(3), source: Relative(2), bit_size: Integer(U32) }, Const { destination: Relative(2), bit_size: Integer(U32), value: 4294967295 }, BinaryIntOp { destination: Relative(4), op: Equals, bit_size: U32, lhs: Relative(3), rhs: Relative(2) }, JumpIf { condition: Relative(4), location: 39 }, Const { destination: Relative(5), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(5) } }, Const { destination: Relative(2), bit_size: Integer(U64), value: 9223372036854775807 }, BinaryIntOp { destination: Relative(3), op: Equals, bit_size: U64, lhs: Relative(1), rhs: Relative(2) }, JumpIf { condition: Relative(3), location: 44 }, Const { destination: Relative(4), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(4) } }, Return, Const { destination: Direct(32772), bit_size: Integer(U32), value: 30720 }, BinaryIntOp { destination: Direct(32771), op: LessThan, bit_size: U32, lhs: Direct(0), rhs: Direct(32772) }, JumpIf { condition: Direct(32771), location: 50 }, IndirectConst { destination_pointer: Direct(1), bit_size: Integer(U64), value: 17843811134343075018 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Direct(2) } }, Return]"
  ],
  "debug_symbols": "pdPNjoMgFAXgd7lrFvyIqK/SNA1VbEgIGqqTTIzvPlevztjFLGo3fiKeoxiZoHH38XHzse2eUF0muCcfgn/cQlfbwXcRr07Al4PQUAkGIicMUUAlkXJFckIQklBQKSQjNIEtGWKIgihXFCewRSOSUAS25IgmcsIQBYEthkHGCUFIAlvMPDPYl3cbknPL6g7rxa/Q2+TiAFUcQ2DwZcO43vTsbVwdbMJZzsDFBsXC1ge3nM3sL83/jyq5ZVX5G9bvpzN1Ip3v750Xn6SNPJEuyi1dmk/SgosTcSGKPZ/lL/krjmzt08tvPy9Nydt7cNuwHWN9mB2++31m3zZ96mrXjMktTYe9g8dLppnm13l52g8=",
  "file_map": {
    "50": {
      "source": "fn main(x: i64) {\n    assert_eq(x as i8, -1);\n    assert_eq(x as i16, -1);\n    assert_eq(x as i32, -1);\n    assert_eq(x as i64, 0x7fffffffffffffff);\n}\n",
      "path": ""
    }
  },
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
